--- a/shop/templates/shop/Product form.html
+++ b/shop/templates/shop/Product form.html
@@ -1,29 +1,35 @@
 {% extends 'shop/base.html' %}
 {% block body %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 offset-md-4">
-            <div class="card">
-                <div class="card-header bg-info text-white">
-                    <div class="card-title">
-                        Login
-                    </div>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {% for field in form %}
-                            <div class="form-group">
-                                {{ field.name }}
-                                {{ field }}
-                            </div>
-                        {% endfor %}
-                        <button class="btn-info" type="submit">Save</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+
+        <form method="post">
+        {% csrf_token %}
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Produkto pavadinimas</label>
+                {{ form.name }}
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Kiekis</label>
+                {{ form.quantity }}
+  </div>
+<div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Subkategorija</label>
+                {{ form.subCategory }}
+  </div>
+<div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Tiekėjas</label>
+                {{ form.supplier }}
+  </div>
+            <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Nuotrauka</label>
+                {{ form.image }}
+  </div>
+<div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Kaina</label>
+                {{ form.price }}
+  </div>
+  <button type="submit" class="btn btn-primary">Pridėti</button>
+</form>
+
 
 </div>
 {% endblock %}
