--- a/shop/templates/shop/Product.html
+++ b/shop/templates/shop/Product.html
@@ -1,12 +1,8 @@
 {% extends 'shop/base.html' %}
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en">
 <body>
-        {% block body %}
-          <div class="table-responsive-sm">
+{% block body %}
+<div class="table-responsive-sm">
           <caption>List of products</caption>
             <table class="table">
               <thead>
@@ -14,7 +10,6 @@
                   <th scope="col">ID</th>
                   <th scope="col">Pavadinimas</th>
                   <th scope="col">Kiekis sandėlyje</th>
-                  <th scope="col">Matavimo vienetai</th>
                    <th scope="col">Kaina</th>
                     <th scope="col">Subcategorija</th>
                     <th scope="col">Tiekėjas</th>
@@ -22,13 +17,13 @@
                     <th scope="col">Trinti</th>
                 </tr>
               </thead>
-            {% for prod in product_list %}
+
+    {% for prod in product_list %}
                 <tbody>
                     <tr>
                       <th scope="row">{{ prod.id }}</th>
                       <td>{{ prod.name }}</td>
                       <td>{{ prod.quantity }}</td>
-                      <td>{{ prod.matt.name }}</td>
                         <td>{{ prod.price }}</td>
                         <td>{{ prod.subCategory.name }}</td>
                         <td>{{ prod.supplier.name }}</td>
@@ -39,8 +34,6 @@
             {% endfor %}
             </table>
           </div>
-        {% endblock %}
+{% endblock %}
 </body>
 </html>
-
-
