--- a/shop/templates/shop/SupplierForm.html
+++ b/shop/templates/shop/SupplierForm.html
@@ -1,29 +1,29 @@
 {% extends 'shop/base.html' %}
 {% block body %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 offset-md-4">
-            <div class="card">
-                <div class="card-header bg-info text-white">
-                    <div class="card-title">
-                        Tiekėjo pridėjimas
-                    </div>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {% for field in form %}
-                            <div class="form-group">
-                                {{ field.name }}
-                                {{ field }}
-                            </div>
-                        {% endfor %}
-                        <button class="btn-info" type="submit">Save</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+ <form method="post">
+        {% csrf_token %}
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Tiekėjo pavadinimas</label>
+                {{ form.name }}
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Telefono numeris</label>
+                {{ form.phone_number }}
+  </div>
+<div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">El. paštas</label>
+                {{ form.email }}
+  </div>
+<div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Adresas</label>
+                {{ form.adress }}
+  </div>
+
+
+
+  <button type="submit" class="btn btn-primary">Pridėti</button>
+</form>
+
 
 </div>
 {% endblock %}
