--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -79,7 +79,43 @@
             </div>
         </div>
     </div>
+        {% if products %}
+        <div class="table-responsive-sm">
+          <caption>List of products</caption>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">ID</th>
+                  <th scope="col">Pavadinimas</th>
+                  <th scope="col">Kiekis sandėlyje</th>
+                   <th scope="col">Kaina</th>
+                    <th scope="col">Subcategorija</th>
+                    <th scope="col">Tiekėjas</th>
+                    <th scope="col">Redaguoti</th>
+                    <th scope="col">Trinti</th>
+                </tr>
+              </thead>
+            {% endif %}
+    {% for prod in products %}
 
-    {% endblock %}
+
+
+                <tbody>
+                    <tr>
+                      <th scope="row">{{ prod.id }}</th>
+                      <td>{{ prod.name }}</td>
+                      <td>{{ prod.quantity }}</td>
+                        <td>{{ prod.price }}</td>
+                        <td>{{ prod.subCategory.name }}</td>
+                        <td>{{ prod.supplier.name }}</td>
+                        <td><a href="{% url 'shop:edit_product' prod.id %}"><button type="button" class="btn btn-primary" >Redaguoti</button> </a></td>
+                        <td><a href="{% url 'shop:delete_product' prod.id %}"><button type="button" class="btn btn-primary" >Trinti</button> </a></td>
+                    </tr>
+                </tbody>
+            {% endfor %}
+            </table>
+          </div>
+        {% endblock %}
+
 </body>
 </html>
