--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <title>Prisijungti</title>
@@ -10,16 +9,16 @@
     {% block body %}
         <form method="post">
         {% csrf_token %}
-        <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label">Vartotojo vardas</label>
-  {{ form.username }}
-</div>
-<div class="mb-3">
-  <label for="formGroupExampleInput2" class="form-label">Slaptažodis</label>
-  {{ form.password }}
-</div>
-        <button class="btn-info" type="submit">Prisijungti</button>
-        </form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Vartotojo vardas</label>
+      {{ form.username }}
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Slaptažodis</label>
+    {{ form.password }}
+  </div>
+
+  <button type="submit" class="btn btn-primary">Prisijungti</button>
+</form>
     {% endblock %}
 </body>
-</html>
