--- a/users/templates/users/succes.html
+++ b/users/templates/users/succes.html
@@ -1,13 +1,12 @@
-{% extends 'shop/base.html' %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
 </head>
 <body>
     {% block body %}
-        <h1>{{ user.profile.name }}</h1>
+        <h2>success</h2>
     {% endblock %}
-
 </body>
 </html>
