--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="{% static 'food/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>ŽRPIS</title>
+
 </head>
 <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Zvejybos reikmenu IS</a>
+    <a class="navbar-brand" href="#">ŽRPIS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,6 +19,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'dashboard' %}">Pagrindinis</a>
+        </li>
+      <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'shop:index' %}">Prekių katalogas</a>
         </li>
          <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,10 +38,10 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="{% url 'shop:suppliers' %}">Tiekėjų sąrašas</a></li>
-            <li><a class="dropdown-item" href="#">Saskaitos</a></li>
               <li><a class="dropdown-item" href="{% url 'shop:create_supplier' %}">Pridėti tiekėją</a></li>
           </ul>
         </li>
+
           <li class="nav-item">
               {% if user.is_authenticated %}
                   <li class="nav-item dropdown">
@@ -46,6 +50,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="{% url 'profile' %}">Mano duomenys</a></li>
+             <li><a class="dropdown-item" href="{% url 'allProfiles' %}">Visi darbuotojai</a></li>
             <li><a class="dropdown-item" href="{% url 'logout' %}">Atsijungti</a></li>
           </ul>
         </li>
@@ -54,11 +59,11 @@
         </li>
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Žinutės
+            Skelbimai
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{% url 'send_message' %}">Rašyti žinutę</a></li>
-            <li><a class="dropdown-item" href="{% url 'inbox' %}">Gautieji</a></li>
+            <li><a class="dropdown-item" href="{% url 'send_message' %}">Rašyti naują</a></li>
+            <li><a class="dropdown-item" href="{% url 'inbox' %}">Visi skelbimai</a></li>
           </ul>
         </li>
       </ul>
@@ -70,7 +75,6 @@
     </div>
   </div>
 </nav>
-
       {% block body %}
     {% endblock %}
 </body>
