--- a/shop/templates/shop/product-search.html
+++ b/shop/templates/shop/product-search.html
@@ -15,9 +15,8 @@
                   <th scope="col">ID</th>
                   <th scope="col">Pavadinimas</th>
                   <th scope="col">Kiekis sandėlyje</th>
-                  <th scope="col">Matavimo vienetai</th>
-                   <th scope="col">Kaina</th>
-                    <th scope="col">Subcategorija</th>
+                   <th scope="col">Kaina eur</th>
+                    <th scope="col">Subkategorija</th>
                     <th scope="col">Tiekėjas</th>
                     <th scope="col">Redaguoti</th>
                     <th scope="col">Trinti</th>
@@ -29,7 +28,6 @@
                       <th scope="row">{{ prod.id }}</th>
                       <td>{{ prod.name }}</td>
                       <td>{{ prod.quantity }}</td>
-                      <td>{{ prod.matt.name }}</td>
                         <td>{{ prod.price }}</td>
                         <td>{{ prod.subCategory.name }}</td>
                         <td>{{ prod.supplier.name }}</td>
