--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -70,8 +70,8 @@
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
-                                <div class="stat-text"><span class="count" style="color: white">{{ subcategories }}</span></div>
-                                <div class="stat-heading" style="color: white">Subkategorijos</div>
+                                <div class="stat-text"><span class="count" style="color: white">{{ messages }}</span></div>
+                                <div class="stat-heading" style="color: white">Skelbimai</div>
                             </div>
                         </div>
                     </div>
@@ -81,15 +81,15 @@
     </div>
         {% if products %}
         <div class="table-responsive-sm">
-          <caption>List of products</caption>
+          <caption>Trūkstamų produktų sąrašas</caption>
             <table class="table">
               <thead>
                 <tr>
                   <th scope="col">ID</th>
                   <th scope="col">Pavadinimas</th>
                   <th scope="col">Kiekis sandėlyje</th>
-                   <th scope="col">Kaina</th>
-                    <th scope="col">Subcategorija</th>
+                   <th scope="col">Kaina eur</th>
+                    <th scope="col">Subkategorija</th>
                     <th scope="col">Tiekėjas</th>
                     <th scope="col">Redaguoti</th>
                     <th scope="col">Trinti</th>
