--- a/shop/templates/shop/Email-page.html
+++ b/shop/templates/shop/Email-page.html
@@ -1,3 +1,4 @@
+{% extends 'shop/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +9,16 @@
     {% block body %}
          <form method="post">
          {% csrf_token %}
-        {{ form }}
+        <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Tema</label>
+                {{ form.subject }}
+  </div>
+             <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Žinutė</label>
+                {{ form.message }}
+  </div>
 
-        <input type="submit" value="send"/>
+        <button type="submit" class="btn btn-primary">Siųsti</button>
         </form>
     {% endblock %}
 </body>
