--- a/users/templates/users/Profile-page.html
+++ b/users/templates/users/Profile-page.html
@@ -6,7 +6,64 @@
 </head>
 <body>
     {% block body %}
-        <h1>{{ user.profile.name }}</h1>
+        {% for profiles in profile %}
+            <div class="row gutters-sm">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex flex-column align-items-center text-center">
+                    <img src="{{ profiles.image.url }}" class="rounded-circle" width="150">
+                    <div class="mt-3">
+                      <h4>{{ profiles.name }} {{ profiles.surname }}</h4>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <div class="col-md-8">
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Vardas pavardė </h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      {{ profiles.name }} {{ profiles.surname }}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Elektroninis paštas</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      {{ profiles.email }}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Telefono numeris</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                        {{ profiles.phone_number }}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Adresas</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      {{ profiles.adress }}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </div>
+            </div>
+        {% endfor %}
     {% endblock %}
 
 </body>
