--- a/users/templates/users/inbox.html
+++ b/users/templates/users/inbox.html
@@ -7,8 +7,14 @@
 <body>
     {% block body %}
         {% for m in msg %}
-            <h2>{{ m.sender }}</h2>
-            <h2>{{ m.message_content }}</h2>
+           <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{ m.sender.first_name }} {{ m.sender.last_name }}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{ m.created_at|date:'Y-m-d G:i' }}</h6>
+    <p class="card-text">{{ m.message_content }}</p>
+    <a href="{% url 'send_message' %}" class="card-link">Atsakyti</a>
+  </div>
+</div>
         {% endfor %}
     {% endblock %}
 </body>
